--- a/css/styles.css
+++ b/css/styles.css
@@ -204,19 +204,18 @@ img {
 /* ====== SECOND SECTION - WHAT WE DO ====== */
 
 
-.second-section {
-}
-.container {
-}
-.section-title {
-}
-.title {
-}
-.list {
-}
-.item {
-}
-.item-title {
-}
-.item-text {
-}
+.second-section {}
+
+.container {}
+
+.section-title {}
+
+.title {}
+
+.list {}
+
+.item {}
+
+.item-title {}
+
+.item-text {}
