--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
     padding: 0;
 }
 
-h1,
+/* h1,
 h2 {
     font-family: "Poppins", sans-serif;
     color: #212121;
@@ -22,7 +22,7 @@ h4,
 h5,
 h6 {
     font-family: "Open Sans", sans-serif;
-}
+} */
 
 a {
     text-decoration: none;
@@ -36,10 +36,28 @@ img {
     display: block;
 }
 
+.wrapper {
+    position: relative;
+    max-width: 1920px;
+    margin: 0 auto;
+}
+
 .container {
     max-width: 1400px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.first-left-deco {
+    position: absolute;
+    top: 757px;
+    left: 10px;
+}
+
+.first-right-deco {
+    position: absolute;
+    top: 1348px;
+    right: 10px;
 }
 
 
@@ -90,7 +108,7 @@ img {
 
 .header-button {
     display: block;
-    background-color: #CAA892;
+    background-color: #caa892;
     color: #fff;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
@@ -159,7 +177,7 @@ img {
 .first-section .button {
     display: block;
     padding: 12px 28px;
-    background-color: #37806B;
+    background-color: #37806b;
     border: 0;
     border-radius: 20px 0;
     cursor: pointer;
@@ -195,7 +213,7 @@ img {
     display: block;
     width: 717px;
     height: 626px;
-    border: 2px solid #B0855B;
+    border: 2px solid #b0855b;
     border-radius: 140px 0;
     z-index: 4;
 }
@@ -204,18 +222,86 @@ img {
 /* ====== SECOND SECTION - WHAT WE DO ====== */
 
 
-.second-section {}
+.second-section {
+    padding: 80px 0 80px 0;
+}
 
-.container {}
+.second-section .section-title {
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #646464;
+    margin-bottom: 17px;
+}
 
-.section-title {}
+.second-section .title {
+    color: #212121;
+    font-family: Poppins;
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 0.75;
+    margin-bottom: 71px;
+}
 
-.title {}
+.second-section .list {
+    display: flex;
+    justify-content: center;
+    gap: 46px;
+}
 
-.list {}
+.second-section .item {
+    position: relative;
+    flex-basis: calc((100% - 46px * 2) / 3);
+    transition: scale 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-.item {}
+.second-section .item:hover,
+.second-section .item:focus {
+    scale: 1.1;
+}
 
-.item-title {}
+.second-section .item-icon {
+    position: absolute;
+    top: 40px;
+    left: 40px;
+}
 
-.item-text {}
+.second-section .item-container {
+    display: block;
+    padding: 40px 21px 35px 97px;
+    border-radius: 60px 0;
+    width: 100%;
+    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.14);
+    background-color: #fff;
+}
+
+.second-section .item:nth-child(2) .item-container {
+    background-color: #caa892;
+}
+
+.second-section .item-title {
+    color: #212121;
+    font-family: "Open Sans", sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 0.83;
+    margin-bottom: 13px;
+}
+
+.second-section .item:nth-child(2) .item-title {
+    color: #fff;
+}
+
+.second-section .item-text {
+    color: #646464;
+    font-family: "Open Sans", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.56;
+    letter-spacing: -0.01em;
+}
+
+.second-section .item:nth-child(2) .item-text {
+    color: #fff;
+}
