--- a/css/styles.css
+++ b/css/styles.css
@@ -50,14 +50,14 @@ img {
 
 .first-left-deco {
     position: absolute;
-    top: 757px;
-    left: -200px;
+    top: 740px;
+    left: -80px;
 }
 
 .first-right-deco {
     position: absolute;
-    top: 1320px;
-    right: -200px;
+    top: 1200px;
+    right: -80px;
 }
 
 
@@ -141,7 +141,7 @@ img {
 
 .first-section .text-content {
     display: block;
-    max-width: 565px;
+    max-width: 525px;
     padding-top: 130px;
     padding-bottom: 30px;
 }
@@ -157,7 +157,7 @@ img {
 
 .first-section .title {
     font-family: "Poppins", sans-serif;
-    font-size: 72px;
+    font-size: 60px;
     font-weight: 600;
     line-height: 1.08;
     text-transform: capitalize;
@@ -167,7 +167,7 @@ img {
 
 .first-section .text {
     font-family: "Open Sans", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
     line-height: 1.67;
     color: #646464;
@@ -183,7 +183,7 @@ img {
     cursor: pointer;
     text-transform: uppercase;
     font-family: "Open Sans", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     line-height: 1;
     color: #fff;
@@ -237,7 +237,7 @@ img {
 .second-section .title {
     color: #212121;
     font-family: Poppins;
-    font-size: 48px;
+    font-size: 40px;
     font-weight: 500;
     line-height: 0.75;
     margin-bottom: 71px;
@@ -245,8 +245,8 @@ img {
 
 .second-section .list {
     display: flex;
-    justify-content: center;
-    gap: 46px;
+    justify-content: space-between;
+    gap: 35px;
 }
 
 .second-section .item {
@@ -262,14 +262,14 @@ img {
 
 .second-section .item-icon {
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 25px;
+    left: 25px;
 }
 
 .second-section .item-container {
     display: block;
-    padding: 40px 21px 35px 97px;
-    border-radius: 60px 0;
+    padding: 30px 25px 25px 85px;
+    border-radius: 35px 0;
     width: 100%;
     box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.14);
     background-color: #fff;
@@ -282,7 +282,7 @@ img {
 .second-section .item-title {
     color: #212121;
     font-family: "Open Sans", sans-serif;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 700;
     line-height: 0.83;
     margin-bottom: 13px;
@@ -295,9 +295,9 @@ img {
 .second-section .item-text {
     color: #646464;
     font-family: "Open Sans", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
-    line-height: 1.56;
+    line-height: 1.3;
     letter-spacing: -0.01em;
 }
 
