--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    position: relative;
     margin: 0;
     padding: 0;
 }
@@ -36,11 +37,11 @@ img {
     display: block;
 }
 
-.wrapper {
+/* .wrapper {
     position: relative;
     max-width: 1366px;
     margin: 0 auto;
-}
+} */
 
 .container {
     max-width: 1158px;
@@ -50,14 +51,14 @@ img {
 
 .first-left-deco {
     position: absolute;
-    top: 740px;
-    left: -80px;
+    top: 735px;
+    left: 120px;
 }
 
 .first-right-deco {
     position: absolute;
     top: 1200px;
-    right: -80px;
+    right: 120px;
 }
 
 
@@ -97,13 +98,15 @@ img {
     color: #212121;
     text-transform: uppercase;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
-    transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
+    transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
+        text-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-link:hover,
 .navigation-link:focus,
 .navigation-link:active {
     color: #646464;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .header-button {
@@ -112,7 +115,7 @@ img {
     color: #fff;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
     text-align: center;
     padding: 5px 19px;
@@ -121,12 +124,14 @@ img {
     cursor: pointer;
     margin-right: 16px;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
-    transition: scale 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
+    transition: scale 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
+        box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
 }
 
 .header-button:hover,
 .header-button:focus {
-    scale: 1.05;
+    scale: 1.02;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -184,16 +189,18 @@ img {
     text-transform: uppercase;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1;
     color: #fff;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
-    transition: scale 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
+    transition: scale 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
+        box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
 }
 
 .first-section .button:hover,
 .first-section .button:focus {
-    scale: 1.05;
+    scale: 1.02;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
 }
 
 .first-section .image {
@@ -257,7 +264,7 @@ img {
 
 .second-section .item:hover,
 .second-section .item:focus {
-    scale: 1.1;
+    scale: 1.025;
 }
 
 .second-section .item-icon {
@@ -271,7 +278,7 @@ img {
     padding: 30px 25px 25px 85px;
     border-radius: 35px 0;
     width: 100%;
-    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.14);
+    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
     background-color: #fff;
 }
 
