--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,12 @@ img {
     left: 120px;
 }
 
+.second-left-deco {
+    position: absolute;
+    top: 1970px;
+    left: 120px;
+}
+
 .first-right-deco {
     position: absolute;
     top: 1200px;
@@ -229,7 +235,7 @@ img {
 
 
 .second-section {
-    padding: 80px 0 80px 0;
+    padding: 80px 0 120px 0;
 }
 
 .second-section .section-title {
@@ -243,10 +249,11 @@ img {
 
 .second-section .title {
     color: #212121;
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 40px;
     font-weight: 500;
     line-height: 0.75;
+    letter-spacing: -0.01em;
     margin-bottom: 71px;
 }
 
@@ -310,4 +317,192 @@ img {
 
 .second-section .item:nth-child(2) .item-text {
     color: #fff;
+}
+
+
+/* ====== THIRD SECTION - ABOUT US ====== */
+
+
+.third-section {
+    padding: 80px 0 80px 0;
+    background-color: #fff;
+    position: relative;
+}
+
+.third-section .text-content {
+    display: block;
+    max-width: 545px;
+    padding-top: 50px;
+    padding-bottom: 30px;
+    margin-right: 0;
+    margin-left: auto;
+}
+
+.third-section .section-title {
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #646464;
+    margin-bottom: 11px;
+}
+
+.third-section .title {
+    max-width: 385px;
+    font-family: "Poppins", sans-serif;
+    color: #212121;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.19;
+    letter-spacing: -0.01em;
+    color: #212121;
+    margin-bottom: 23px;
+}
+
+.third-section .text {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.67;
+    color: #646464;
+    margin-bottom: 46px;
+}
+
+.third-section .button {
+    display: block;
+    padding: 12px 28px;
+    background-color: #37806b;
+    border: 0;
+    border-radius: 20px 0;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1;
+    color: #fff;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
+    transition: scale 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
+        box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
+}
+
+.third-section .button:hover,
+.third-section .button:focus {
+    scale: 1.02;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
+}
+
+.third-section .image {
+    position: absolute;
+    top: 80px;
+    left: 0;
+    max-width: 525px;
+    border-radius: 140px 0;
+    z-index: 5;
+}
+
+.third-section .bg-outline {
+    position: absolute;
+    top: 45px;
+    left: -35px;
+    display: block;
+    width: 525px;
+    height: 559px;
+    border: 2px solid #b0855b;
+    border-radius: 140px 0;
+    z-index: 4;
+}
+
+
+/* ====== FOURTH SECTION - 20 ====== */
+
+
+.fourth-section {
+    padding: 80px 0 80px 0;
+    background-color: #fff;
+    position: relative;
+}
+
+.fourth-section .text-content {
+    display: block;
+    max-width: 525px;
+    padding-top: 100px;
+    padding-bottom: 30px;
+}
+
+.fourth-section .section-title {
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #646464;
+    margin-bottom: 11px;
+}
+
+.fourth-section .title {
+    font-family: "Poppins", sans-serif;
+    font-size: 46px;
+    font-weight: 500;
+    line-height: 1.3;
+    letter-spacing: 0.04em;
+    color: #212121;
+    margin-bottom: 40px;
+}
+
+/* .fourth-section .text {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.67;
+    color: #646464;
+    margin-bottom: 46px;
+} */
+
+.fourth-section .button {
+    display: block;
+    padding: 12px 28px;
+    background-color: #37806b;
+    border: 0;
+    border-radius: 20px 0;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1;
+    color: #fff;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
+    transition: scale 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
+        box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
+}
+
+.fourth-section .button:hover,
+.fourth-section .button:focus {
+    scale: 1.02;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
+}
+
+.fourth-section .image {
+    position: absolute;
+    top: 80px;
+    right: 0;
+    max-width: 525px;
+    border-radius: 140px 0;
+    z-index: 5;
+}
+
+.fourth-section .number {
+    margin-bottom: 40px;
+}
+
+.fourth-section .bg-outline {
+    position: absolute;
+    top: 115px;
+    right: -35px;
+    display: block;
+    width: 524px;
+    height: 559px;
+    border: 2px solid #b0855b;
+    border-radius: 140px 0;
+    z-index: 4;
 }
