--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,18 @@ img {
     right: 0;
     max-width: 550px;
     border-radius: 140px 0;
-    z-index: 5;
+}
+
+.first-section .fog {
+    display: block;
+    position: absolute;
+    top: 80px;
+    right: 0;
+    width: 550px;
+    height: 481px;
+    border-radius: 140px 0;
+    background-color: lightgray;
+    opacity: 0.2;
 }
 
 .first-section .bg-outline {
@@ -227,7 +238,6 @@ img {
     height: 481px;
     border: 2px solid #b0855b;
     border-radius: 140px 0;
-    z-index: 4;
 }
 
 
@@ -398,7 +408,18 @@ img {
     left: 0;
     max-width: 525px;
     border-radius: 140px 0;
-    z-index: 5;
+}
+
+.third-section .fog {
+    display: block;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 525px;
+    height: 559px;
+    border-radius: 140px 0;
+    background-color: lightgray;
+    opacity: 0.2;
 }
 
 .third-section .bg-outline {
@@ -410,7 +431,6 @@ img {
     height: 559px;
     border: 2px solid #b0855b;
     border-radius: 140px 0;
-    z-index: 4;
 }
 
 
@@ -488,7 +508,18 @@ img {
     right: 0;
     max-width: 525px;
     border-radius: 140px 0;
-    z-index: 5;
+}
+
+.fourth-section .fog {
+    display: block;
+    position: absolute;
+    top: 80px;
+    right: 0;
+    width: 525px;
+    height: 560px;
+    border-radius: 140px 0;
+    background-color: lightgray;
+    opacity: 0.2;
 }
 
 .fourth-section .number {
@@ -504,5 +535,4 @@ img {
     height: 559px;
     border: 2px solid #b0855b;
     border-radius: 140px 0;
-    z-index: 4;
 }
