--- a/css/styles.css
+++ b/css/styles.css
@@ -82,18 +82,18 @@ img {
 .header-navigation {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     gap: 220px;
 }
 
 .navigation-list {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     gap: 35px;
 }
 
-/* .navigation-item {} */
+.navigation-item {}
+
+.navigation-item:not(:last-child) {}
 
 .navigation-link {
     font-family: "Open Sans";
@@ -103,7 +103,6 @@ img {
     background-color: transparent;
     color: #212121;
     text-transform: uppercase;
-    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
     transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
         text-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
