--- a/css/styles.css
+++ b/css/styles.css
@@ -7,23 +7,9 @@
 }
 
 body {
-    position: relative;
     margin: 0;
     padding: 0;
 }
-
-/* h1,
-h2 {
-    font-family: "Poppins", sans-serif;
-    color: #212121;
-}
-
-h3,
-h4,
-h5,
-h6 {
-    font-family: "Open Sans", sans-serif;
-} */
 
 a {
     text-decoration: none;
@@ -37,12 +23,6 @@ ul {
 img {
     display: block;
 }
-
-/* .wrapper {
-    position: relative;
-    max-width: 1366px;
-    margin: 0 auto;
-} */
 
 .container {
     max-width: 1158px;
@@ -226,7 +206,7 @@ img {
     top: 80px;
     right: 0;
     max-width: 550px;
-    border-radius: 140px 0;
+    border-radius: 105px 0;
     filter: contrast(0.8);
 }
 
@@ -300,7 +280,7 @@ img {
     background-color: #fff;
 }
 
-.second-section .item:nth-child(2) .item-container {
+.second-section .item:nth-child(even) .item-container {
     background-color: #caa892;
 }
 
@@ -313,7 +293,7 @@ img {
     margin-bottom: 13px;
 }
 
-.second-section .item:nth-child(2) .item-title {
+.second-section .item:nth-child(even) .item-title {
     color: #fff;
 }
 
@@ -326,25 +306,65 @@ img {
     letter-spacing: -0.01em;
 }
 
-.second-section .item:nth-child(2) .item-text {
+.second-section .item:nth-child(even) .item-text {
     color: #fff;
 }
 
-.slider-controls-container {
-    position: absolute;
+.second-section .wrapper {
+    display: flex;
+    justify-content: space-between;
+
 }
 
-.slider-controls-list {
+.second-section .slider-controls-container {
+    margin-right: 35px;
+    align-self: center;
+}
+
+.second-section .slider-controls-list {
     display: flex;
     gap: 15px;
 }
 
-.slider-controls-item {
-    width: 30px;
-    height: 30px;
+.second-section .slider-controls-item {}
+
+.second-section .slider-controls-item:nth-child(even) {
+    transform: rotateY(180deg);
 }
 
-.slider-controls {}
+.second-section .slider-controls {
+    border: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.15);
+    transition:
+        scale 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
+        box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
+        background-color 200ms cubic-bezier(0.1, 0, 0.2, 1) 100ms;
+}
+
+.second-section .slider-controls:hover,
+.second-section .slider-controls:focus {
+    scale: 1.02;
+    box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.3);
+    background-color: #37806B;
+}
+
+.second-section .controls-icon {
+    stroke: #646464;
+    transition:
+        stroke 200ms cubic-bezier(0.1, 0, 0.2, 1) 100ms;
+}
+
+.second-section .slider-controls:hover .controls-icon,
+.second-section .slider-controls:focus .controls-icon {
+    stroke: #F8F8F8;
+}
 
 
 /* ====== THIRD SECTION - ABOUT US ====== */
@@ -424,7 +444,7 @@ img {
     top: 80px;
     left: 0;
     max-width: 525px;
-    border-radius: 140px 0;
+    border-radius: 105px 0;
     filter: contrast(0.8);
 }
 
@@ -513,7 +533,7 @@ img {
     top: 80px;
     right: 0;
     max-width: 525px;
-    border-radius: 140px 0;
+    border-radius: 105px 0;
     filter: contrast(0.8);
 }
 
@@ -569,20 +589,6 @@ img {
     box-shadow: 0px 13px 16px 0px rgba(0, 0, 0, 0.10);
 }
 
-/* .fifth-section .list li:nth-child(1),
-.fifth-section .list li:nth-child(5) {
-    align-self: flex-start;
-}
-
-.fifth-section .list li:nth-child(3),
-.fifth-section .list li:nth-child(7) {
-    align-self: flex-end;
-}
-
-.fifth-section .list li:nth-child(4) {
-    transform: rotateY(180deg);
-} */
-
 .fifth-section .vector {
     position: absolute;
     left: 170px;
@@ -625,6 +631,7 @@ img {
 
 .sixth-section {
     padding: 140px 0;
+    position: relative;
 }
 
 .sixth-section .section-title {
@@ -644,7 +651,7 @@ img {
     font-weight: 500;
     line-height: 1.3;
     color: #212121;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
 }
 
 .sixth-section .list {
@@ -708,6 +715,62 @@ img {
 
 .sixth-section .image {}
 
+.sixth-section .wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.sixth-section .slider-controls-container {
+    align-self: flex-end;
+    margin-bottom: 60px;
+}
+
+.sixth-section .slider-controls-list {
+    display: flex;
+    gap: 15px;
+}
+
+.sixth-section .slider-controls-item {}
+
+.sixth-section .slider-controls-item:nth-child(even) {
+    transform: rotateY(180deg);
+}
+
+.sixth-section .slider-controls {
+    border: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.15);
+    transition:
+        scale 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
+        box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
+        background-color 200ms cubic-bezier(0.1, 0, 0.2, 1) 100ms;
+}
+
+.sixth-section .slider-controls:hover,
+.sixth-section .slider-controls:focus {
+    scale: 1.02;
+    box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.3);
+    background-color: #37806B;
+}
+
+.sixth-section .controls-icon {
+    stroke: #646464;
+    transition:
+        stroke 200ms cubic-bezier(0.1, 0, 0.2, 1) 100ms;
+}
+
+.sixth-section .slider-controls:hover .controls-icon,
+.sixth-section .slider-controls:focus .controls-icon {
+    stroke: #F8F8F8;
+}
+
 
 /* ====== SEVENTH SECTION - BLOG ====== */
 
@@ -761,7 +824,7 @@ img {
     height: 350px;
     width: 500px;
     overflow: hidden;
-    border-radius: 100px 0;
+    border-radius: 85px 0;
     bottom: 15px;
     right: 15px;
 }
@@ -859,7 +922,7 @@ img {
 
 
 .eighth-section .input-field {
-    width: 650px;
+    width: 450px;
     height: 50px;
     padding-left: 25px;
     background-color: #eee;
@@ -875,7 +938,7 @@ img {
 .eighth-section .input-field::placeholder {
     color: #646464;
     font-family: "Poppins", sans-serif;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 300;
     line-height: 3.06;
 }
